--- a/assets/stile.css
+++ b/assets/stile.css
@@ -11,8 +11,9 @@ body {
   background-size: cover;
 }
 #container {
-  width: 360px;
+  width: 100%;
   height: 712px;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0px 24px
 }
