--- a/assets/stile.css
+++ b/assets/stile.css
@@ -9,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
 }
 #container {
   width: 100%;
@@ -163,3 +164,12 @@ footer{
   font-size: 14px;
 }
 
+/* media queries*/
+@media (min-width: 700px) {
+   :root{
+    --bg-url: url(/assets/bg-desktop.jpg);
+   }
+    .light {
+      --bg-url: url(/assets/bg-desktop-light);
+    }
+}
