--- a/assets/stile.css
+++ b/assets/stile.css
@@ -52,12 +52,16 @@ body {
   
   z-index: 1;
   transform: translateY(-50%);
-  
+  animation: slide-back 0.2s;
 }
 
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+}
+
+
 .light #switch button {
-right: 0;
-left: initial;
+animation: slide-in 0.4s forwards ;
 } 
 
 #switch span{
@@ -172,4 +176,23 @@ footer{
     .light {
       --bg-url: url(/assets/bg-desktop-light);
     }
+}
+/*animatiom*/
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+   from{
+    left: 50%;
+   }
+  to {
+    left:0;
+  }
 }
